added second page

--- a/index.html
+++ b/index.html
@@ -9,37 +9,173 @@
       href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap"
       rel="stylesheet"
     />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&family=Tangerine:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&family=Tangerine:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <section id="Home">
-    <video autoplay muted loop id="video">
-      <source src="wall.mp4" type="video/mp4" />
-    </video>
+      <video autoplay muted loop id="video">
+        <source src="wall.mp4" type="video/mp4" />
+      </video>
 
-    <div class="content">
-      <h1>ANIME WORLD</h1>
-    </div>
-    <div class="screen">width: 100%; height: 100vh;</div>
+      <div class="content">
+        <h1>ANIME WORLD</h1>
+      </div>
+      <div class="screen">width: 100%; height: 100vh;</div>
 
-    <div class="box">
-      <div id="para">
-        <p>
-          Every legend starts with a first episode.Begin your anime journey with
-          these unforgettable series!
-        </p>
+      <div class="box">
+        <div id="para">
+          <p>
+            Every legend starts with a first episode.Begin your anime journey
+            with these unforgettable series!
+          </p>
+        </div>
+        <div>
+          <button class="button"><a href="#Anime">Let's Start</a></button>
+        </div>
       </div>
-      <div>
-        <button class="button"><a href="#Anime">Let's Start</a></button>
-      </div>
-    </div>
-    </section> 
-    <section id="Anime">
-      
     </section>
-    
+    <section id="Anime">
+      <div class="screen2"></div>
+      <h3>Anime for first timers</h3>
+      <div class="container">
+        <div class="c1">
+          <div class="DN">
+            <img
+              src="https://upload.wikimedia.org/wikipedia/en/thumb/7/72/Death_Note_Characters.jpg/250px-Death_Note_Characters.jpg"
+              alt=""
+            />
+            <div class="bar" style="z-index: 1">
+              <h3>Death Note</h3>
+              <br />
+
+              <p>
+                Imagine finding a notebook that lets you kill anyone just by
+                writing their name — scary, right? That’s what happens to Light
+                Yagami, a genius student who decides to use it to “cleanse” the
+                world of criminals. But his plan attracts the attention of L, a
+                brilliant detective determined to stop him.
+              </p>
+              <br />
+              <p>
+                It’s a psychological thriller, mystery, and supernatural anime
+                filled with mind games, tension, and moral questions. Every
+                episode feels like a chess match between two geniuses. If you
+                love clever plots, dark themes, and thrilling twists, Death Note
+                is an absolute must-watch classic.
+              </p>
+            </div>
+          </div>
+
+          <div class="HP">
+            <img
+              src="https://w0.peakpx.com/wallpaper/104/9/HD-wallpaper-jigokuraku-anime-hells-paradise-manga-seinen-shounen.jpg"
+              alt=""
+            />
+            <div class="bar" style="z-index: 2">
+              <h3>Hell’s Paradise</h3>
+              <br />
+
+              <p>
+                Gabimaru, a deadly ninja sentenced to death, is offered freedom
+                if he finds the Elixir of Life on a mysterious island filled
+                with monsters and killers. Alongside the executioner Sagiri, he
+                faces twisted creatures and his own past.
+              </p>
+              <br />
+              <p>
+                It’s a dark fantasy, action, and psychological anime mixing
+                brutal fights with emotional depth. The world is eerie yet
+                beautiful, blending horror, philosophy, and redemption. The
+                animation is top-tier, and the story questions what it means to
+                live. If you liked Jujutsu Kaisen or Chainsaw Man, you’ll love
+                this intense, beautifully crafted adventure.
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="c2">
+          <div class="sk">
+            <img
+              src="https://images.penguinrandomhouse.com/cover/9798888770665"
+              alt=""
+            />
+            <div class="bar" style="z-index: 1">
+              <h3>Shikimori’s Not Just a Cutie</h3>
+              <br />
+
+              <p>
+                Meet Shikimori — she’s beautiful, kind, and has a cool, badass side that appears whenever her clumsy boyfriend Izumi gets into trouble. It’s a romantic comedy set in high school, but what makes it fun is how it flips the usual roles: the girl protects the boy, and she does it with style!
+              </p>
+              <br />
+              <p>
+                The show blends sweetness with comedy and little bursts of action-like flair. Their chemistry feels natural and adorable, with every episode showing small, heartwarming moments. If you like wholesome romance with a confident, charming heroine, this anime will make you smile.
+              </p>
+            </div>
+          </div>
+
+          <div class="spy">
+            <img
+              src="https://resizing.flixster.com/-pie8VlufRywdx4HdClLUbDVv4I=/ems.cHJkLWVtcy1hc3NldHMvdHZzZWFzb24vMTEyZWYzMWQtODVhMy00YjRiLWI4ZmItZTFjMzdhMWM2ZmU0LnBuZw=="
+              alt=""
+            />
+            <div class="bar" style="z-index: 2">
+              <h3>Spy × Family</h3>
+              <br />
+
+              <p>
+                Meet Loid Forger, a top spy on a secret mission who must build a fake family to blend in — but things get hilarious when his “wife” Yor turns out to be an assassin and their “daughter” Anya can read minds!
+              </p>
+              <br />
+              <p>
+                It’s a comedy, action, and slice-of-life anime with a perfect mix of heartwarming moments and undercover chaos. Each episode balances humor, family bonds, and thrilling missions. The dynamic between the Forgers is adorable and full of surprises. Watch it for laughs, love, and an unexpectedly wholesome spy adventure.
+            </div>
+          </div>
+        </div>
+        <div class="c3">
+          <div class="ap">
+            <img
+              src="https://m.media-amazon.com/images/S/pv-target-images/aec876d194a3088dae852e534f5ce8556e9ae59a8abce59d0286a66b4c40881f.jpg"
+              alt=""
+            />
+            <div class="bar" style="z-index: 2">
+              <h3>The Apothecary Diaries</h3>
+              <br />
+
+              <p>
+                Imagine stepping into an ancient palace full of secrets, perfumes, and poisons. That’s where Maomao, a clever young apothecary, finds herself after being forced to work as a servant. She’s curious, sharp-tongued, and can’t resist solving mysteries — especially when they involve strange illnesses or suspicious deaths.
+              </p>
+              <br />
+              <p>
+                It’s a historical mystery drama that feels calm yet exciting, like reading a detective story wrapped in royal silk. The art is gorgeous, the dialogue witty, and Maomao’s logic is so satisfying to watch. If you enjoy clever problem-solving and elegant palace intrigue, this anime is a hidden gem.
+              </p>
+            </div>
+          </div>
+          <div class="bl">
+            <img
+              src="https://static.wikia.nocookie.net/bluelock/images/0/07/Blue_Lock_TV_Anime_2nd_Season_Key_Visual.png/revision/latest/scale-to-width/360?cb=20240530110013"
+              alt=""
+            />
+            <div class="bar" style="z-index: 2">
+              <h3>Blue Lock</h3>
+              <br />
+
+              <p>
+                What if soccer was treated like a survival game? Blue Lock throws 300 of Japan’s best young strikers into an intense training program to create the ultimate ego-driven forward. Among them is Isagi Yoichi, who must outsmart and outscore everyone to secure his dream.
+              </p>
+              <br />
+              <p>
+                It’s a sports, psychological, and action anime that feels like Squid Game meets Haikyuu!!. The matches are wild, emotional, and full of strategy. Characters have huge personalities, rivalries burn hot, and the animation is fire. Watch it if you love competitive spirit, insane twists, and that “win at any cost” energy.
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
 
     <!-- <p>If you're new to watching anime, here are some recommendations to get you started:</p> -->
 
